Include restrictions in resultset